add expenses funcional and staff templates

--- a/core/templates/_base.html
+++ b/core/templates/_base.html
@@ -134,7 +134,7 @@
     {% endblock %}
 
 
-    {% block custom_body_block %}
+    {% block custom_body_blocks %}
     {% endblock %}
 
     <footer class="footer">
