--- a/core/templates/oim_chart.html
+++ b/core/templates/oim_chart.html
@@ -64,8 +64,8 @@
         <hr class="pma-line-2">
         <div class="col-md-7">
             <div class="chart-update col-md-1 float-left">
-                    <span class="pma-icon pe-7s-bubble pma-fg-gray"
-                        aria-hidden="true" id="chart-bubble-1"></span>
+                    <span class="pma-icon pe-7s-bubble pma-fg-gray toggle-chart"
+                        aria-hidden="true" id="chart-bubble-1" data-chartcontainer="bubble-1"></span>
                     <span id="chart-pie-1" class="pma-icon pe-7s-graph
                         pma-fg-gray" aria-hidden="true"></span>
                     <span id="chart-bar-1" class="pma-icon pe-7s-graph3 pma-fg-gray" aria-hidden="true"></span>
@@ -211,7 +211,7 @@
         <div class="row">
             <div class="col-md-12 text-center">
                 <button id="show-detail-1" class="btn btn-default" type="submit">
-                Ver dealles en Tabla</button>
+                Ver detalles en Tabla</button>
             </div>
         </div>
     </div>
@@ -328,7 +328,7 @@
     <div class="row">
         <div class="col-md-12 text-center">
             <button id="show-detail-3" class="btn btn-default" type="submit">
-            Ver dealles en Tabla</button>
+            Ver detalles en Tabla</button>
         </div>
     </div>
 </div>
@@ -460,7 +460,7 @@
         <div class="row">
             <div class="col-md-12 text-center">
                 <button id="show-detail-2" class="btn btn-default" type="submit">
-                Ver dealles en Tabla</button>
+                Ver detalles en Tabla</button>
             </div>
         </div>
     </div>
