base de aci.html

--- a/core/templates/aci.html
+++ b/core/templates/aci.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "_indicator.html" %}
 {% load static thumbnail chartit %}
 {% load humanize %} 
 {% load mathfilters %}
