cambiando leyenda de proyecto

--- a/templates/model_report/includes/form_filter.html
+++ b/templates/model_report/includes/form_filter.html
@@ -3,7 +3,7 @@
     {% with form_filter as form %}
         <fieldset>
             {% if not form.filter_report_is_all %}
-            <legend>{% trans "Filtros" %}</legend>
+            <legend>{% trans "Buscador de proyectos" %}</legend>
             {% endif %}
             {% include "model_report/includes/form_fields.html" %}
         </fieldset>
