--- a/core/templates/oim_chart.html
+++ b/core/templates/oim_chart.html
@@ -25,7 +25,7 @@
         <span class="info-box-icon pma-icon initial">
         </span>
         <div class="info-box-content">
-            <span class="info-box-text">Inicial {{ asignado|million|intcomma }}</span>
+            <span class="info-box-text"><strong>Inicial {{ asignado|million|intcomma }}</strong></span>
         </div>
     </div>
 </div>
@@ -35,9 +35,7 @@
         </span>
         <div class="info-box-content">
             <span class="info-box-text">
-            {% if year != '2016' %}
-            Ejecutado {{ ejecutado|million|intcomma }}
-            {% endif %}
+            <strong>Ejecutado {{ ejecutado|million|intcomma }}</strong>
             </span>
             <span class="info-box-number pma-green"></span>
         </div>
@@ -49,9 +47,9 @@
         </span>
         <div class="info-box-content">
             {% if municipio %}
-            {% endif %}
-            <span class="info-box-text">Categor&iacute;a de municipio {{ mi_clase.clasificacion }}</span>
+            <span class="info-box-text"><strong>Categor&iacute;a de municipio {{ mi_clase.clasificacion }}</strong></span>
             <span class="info-box-number pma-green"></span>
+            {% endif %}
         </div>
     </div>
 </div>
@@ -60,15 +58,20 @@
 {% block section1 %}
 <div class="container">
     <div class="row">
-        <h2> <strong>Detalle de Ingresos</strong> <br/> del período</h2>
-        <hr class="pma-line-2">
         <div class="col-md-7">
+            <h2> <strong>Detalle de Ingresos</strong> <br/> del período</h2>
+	    <hr class="pma-line-2">
             <div class="chart-update col-md-1 float-left">
                     <span class="pma-icon pe-7s-bubble pma-fg-gray toggle-chart"
                         aria-hidden="true" id="chart-bubble-1" data-chartcontainer="bubble-1"></span>
                     <span id="chart-pie-1" class="pma-icon pe-7s-graph
-                        pma-fg-gray" aria-hidden="true"></span>
-                    <span id="chart-bar-1" class="pma-icon pe-7s-graph3 pma-fg-gray" aria-hidden="true"></span>
+                        pma-fg-gray toggle-chart" aria-hidden="true"
+                        data-chartcontainer="ejecutado"></span>
+                    {% if not municipio %}
+                    <span id="chart-bar-1" class="pma-icon pe-7s-graph3 pma-fg-gray toggle-chart" data-chartcontainer="comparativo2"></span>
+                    {% else %}
+                    <span id="chart-bar-1" class="pma-icon pe-7s-graph3 pma-fg-gray toggle-chart" data-chartcontainer="ejecutado_column"></span>
+                    {% endif %}
                     <span class="pma-icon pe-7s-graph2 pma-fg-gray"
                         aria-hidden="true" id="icons"></span>
             </div>
@@ -80,32 +83,41 @@
                 Rubros </div>
                 <div id="ejecutado_column" class="view-alternative"> Barras Ejecucion por
                 Rubros </div>
-                <div id="comparativo2" class="view-alternative"> Chart will be rendered here
-                </div>
+                    {% if not municipio %}
+                        <div id='comparativo2' class="view-alternative"> Chart will be rendered here </div>
+                    {% else %}
+                        <div id='comparativo_anios' class="view-alternative"> Chart will be rendered here </div>
+                    {% endif %}
                 <div id="icons" class="view-alternative">
                 </div>
             </div>
         </div>
-        <div class="col-md-5 table-responsive">
+        <div class="col-md-5 table-responsive general-table big">
             <table class="table table-striped table-hover">
                 <thead>
                     <tr class="">
                         <th>Rubros de ingresos</th>
+			{% if periodo_list|keyvalue:year == 'A' %}
                         <th class="text-right">Inicial</th>
-                        <th class="text-right">Ejecutado</th>
+			{% endif %}
+                       	<th class="text-right">Ejecutado</th>
                     </tr>
                 </thead>
                 {% for row in rubros %}
                 <tr>
                     <td>{{ row.subsubtipoingreso__origen__nombre}}</td>
+		    {% if periodo_list|keyvalue:year == 'A' %}
                     <td class="text-right">{{ row.inicial_asignado|million|intcomma }}</td>
+                    {% endif %}
                     <td class="text-right">{{ row.ejecutado|million|intcomma|default:"0" }}</td>
                 </tr>
                 {% endfor %}
                 <tfoot>
                     <tr class="">
                         <td>TOTAL</td>
-                        <td class="text-right">{{ asignado|million|intcomma }}</td>
+		    	{% if periodo_list|keyvalue:year == 'A' %}
+                            <td class="text-right">{{ asignado|million|intcomma }}</td>
+			{% endif %}
                         <td class="text-right">{{ejecutado|million|intcomma|default:"0" }}</td>
                     </tr>
                 </tfoot>
@@ -118,9 +130,7 @@
 {% block section2 %}
 <div class="container" id="section2">
     <div class="row">
-        <div class="col-md-6">
-        </div>
-        <div class="col-md-6 table-responsive">
+        <div class="col-md-12 table-responsive">
             {% if not municipio %}
             <h2><strong>Recaudación por habitante</strong><br/>Córdobas Corrientes</h2>
             <hr class="pma-line-1">
@@ -152,6 +162,7 @@
 {% endblock %}
 
 {% block section3 %}
+{% if municipio %}
 <div class="cd-horizontal-timeline loaded pma-gradient inverted">
     <div class="container">
         <div class="row">
@@ -278,15 +289,16 @@
         </div>
     </div>
 </div>
+{% endif %}
 {% endblock %}
 
 {% block section4 %}
 <div class="container wide">
     <div class="row">
-        <div class="col-md-12 text-center">
-            <h2>Información Histórica<br>
-            <strong>Ejecución Presupuestaria por fuente de ingresos {% if not municipio %}Consolidado municipal {% endif %}</strong> </h2>
-            <hr class="pma-line-4" />
+        <div class="col-md-12">
+            <h2><strong>Información Histórica</strong><br>
+            Ejecución Presupuestaria {% if not municipio %}Consolidado municipal {% endif %} </h2>
+            <hr class="pma-line-2" />
         </div>
     </div>
 </div>
@@ -318,15 +330,17 @@
 
     <div class="events-content">
         <ol>
-            <li data-date="01/01/{{ history_year }}"
-                {% if history_year = year|add:"0" %} class="selected" {% endif %}>
-            </li>
+	    {% for row in anuales %}
+	    <li><a href="#0" data-date="01/01/{{ row.ingreso__anio }}"
+	    {% if row.ingreso__anio = year|add:"0" %} class="selected" {% endif %}
+	    style="left:{{ forloop.counter|mul:"150" }}px;"></a></li>
+	    {% endfor %}
         </ol>
     </div> <!-- .events-content -->
 </div>
 <div class="container">
     <div class="row">
-        <div class="col-md-12 text-center">
+        <div class="col-md-12 text-center ">
             <button id="show-detail-3" class="btn btn-default" type="submit">
             Ver detalles en Tabla</button>
         </div>
@@ -334,9 +348,9 @@
 </div>
 <div id="detail-3" class="container">
     <div class="row">
-        <div class="col-md-12 table-responsive">
+        <div class="col-md-offset-2 col-md-8 table-responsive">
             <table class="table table-condensed">
-                <tr class="info">
+                <tr class="bg-primary">
                     <th></th>
                     {% for year in year_list %}
                     <th class="text-center">{{ year }}
@@ -360,32 +374,17 @@
 {% block section5 %}
 <div class="container wide">
     <div class="row">
-        <div class="col-md-12 text-center">
-            <h2><strong>Modificaciones al presupuesto municipal de ingresos</strong><br>
-            Millones de córdobas corrientes </h2>
+        <div class="col-md-12">
+            <h2><strong>Modificaciones al presupuesto</strong><br>
+            municipal de ingresos </h2>
+            <hr class="pma-line-2" />
         </div>
     </div>
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-offset-2 col-md-8">
         <table class="table table-condensed table-striped">
             <thead>
-            <tr class="bg-primary">
-                <td></td>
-                <td></td>
-                <td colspan="4" class="text-center">
-                    <h4>Modificación intermedia
-                        <a href="#" data-toggle="tooltip" data-original-title="Modificación al {{ year_data.actualizado }}" class="link-info">*</a>
-                    </h4>
-                </td>
-                <td colspan="4" class="text-center">
-                    <h4>Modificación al cierre
-                        <a href="#" data-toggle="tooltip" data-original-title="Modificación al {{ year_data.final }}" class="link-info">*</a>
-                    </h4>
-                </td>
-            </tr>
-            <tr  class="bg-primary"> <th>Rubros de ingresos</th> <th>Inicial</th>
-                <th>Actualizado</th> <th>Modificación</th> <th>Ejecutado</th> <th><a href="#" data-toggle="tooltip" data-original-title="Ejecutado/Actualizado" class="link-info">%</a></th>
-                <th>Actualizado</th> <th>Modificación</th> <th>Ejecutado</th> <th><a href="#" data-toggle="tooltip" data-original-title="Ejecutado/Actualizado" class="link-info">%</a></th>
+            <tr  class="bg-primary"> <th>Rubros de ingresos</th> <th>Inicial</th> <th>Actualizado</th><th>Ejecutado</th> 
             </tr>
             </thead>
             {% for row in rubros %}
@@ -393,24 +392,83 @@
                     <td class="pull-left">{{ row.subsubtipoingreso__origen__nombre}}</td>
                     <td class="text-right">{{ row.inicial_asignado|million|intcomma }}</td>
                     <td class=" text-right">{{ row.actualizado_asignado|million|intcomma }}</td>
-                    <td class="text-right">{% if row.actualizado_asignado and row.inicial_asignado %}{{ row.actualizado_asignado|sub:row.inicial_asignado|million|intcomma }}{% else %}0{% endif %}</td>
-                    <td class="text-right">{{ row.actualizado_ejecutado|million|intcomma }}</td>
-                    {% if row.actualizado_asignado %}
-                    <td class="montos">{{ row.actualizado_ejecutado|div:row.actualizado_asignado|mul:100|floatformat:1|intcomma }}%</td>
-                    {% else %}
-                    <td class="montos">0</td>
-                    {% endif %}
-                    <td class="text-right">{% if row.final_asignado %}{{ row.final_asignado|million|intcomma }}{% else %}0 {% endif %}</td>
-                    <td class="text-right">{% if row.final_asignado %}{{ row.final_asignado|sub:row.inicial_asignado|million|intcomma }}{% else %}0{% endif %}</td>
                     <td class="text-right">{% if row.final_ejecutado %}{{ row.final_ejecutado|million|intcomma }}{% else %}0{% endif %}</td>
-                    {% if row.final_asignado %}
-                    <td class="danger montos">{{ row.final_ejecutado|div:row.final_asignado|mul:100|floatformat:1|intcomma }}%</td>
-                    {% endif %}
-
                 </tr>
             {% endfor %}
             <tfoot>
             <tr class="bold">
+                <td>TOTAL</td>
+                <td class="text-right">{{ rubros|total_sum:'inicial_asignado'|million|intcomma }}</td>
+                <td class="text-right">{{ rubros|total_sum:'actualizado_asignado'|million|intcomma }}</td>
+                <td class="text-right">{{ rubros|total_sum:'final_ejecutado'|million|intcomma }}</td>
+            </tr>
+            </tfoot>
+        </table>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <button id="show-detail-2" class="btn btn-default" type="submit">
+                Ver detalles en Tabla</button>
+            </div>
+        </div>
+    </div>
+
+    <div id="detail-2" class="row">
+        <div class="col-md-12">
+        <h3>Modificaciones al presupuesto municipal de ingresos</h3>
+        <h4 class="text-info">Millones de córdobas corrientes
+        </h4>
+         <div class="collapse" id="collapsemodificacion">
+            <div class="well">
+                <div class="col-md-3 pull-left">Las transferencias se asigna cada año según los criterios establecido en la ley de transferencias y están distribuidas en gatos corrientes y capital.<p></div>
+                <div class="col-md-7"><div id='comparativo3'> Chart will be rendered here </div></div>
+            </div>
+        </div>
+        <table class="table table-condensed">
+            <tr>
+                <td></td>
+                <td></td>
+                <td colspan="4" class="success text-center">
+                    <h4>Modificación intermedia
+                        <a href="#" data-toggle="tooltip" data-original-title="Modificación al {{ year_data.actualizado }}" class="link-info">*</a>
+                    </h4>
+                </td>
+                <td colspan="4" class="danger text-center">
+                    <h4>Modificación al cierre
+                        <a href="#" data-toggle="tooltip" data-original-title="Modificación al {{ year_data.final }}" class="link-info">*</a>
+                    </h4>
+                </td>
+            </tr>
+            <tr class="info"> <th>Rubros de ingresos</th> <th>Inicial</th>
+                <th>Actualizado</th> <th>Modificación</th> <th>Ejecutado</th> <th><a href="#" data-toggle="tooltip" data-original-title="Ejecutado/Actualizado" class="link-info">%</a></th>
+                <th>Actualizado</th> <th>Modificación</th> <th>Ejecutado</th> <th><a href="#" data-toggle="tooltip" data-original-title="Ejecutado/Actualizado" class="link-info">%</a></th>
+            </tr>
+            {% for row in rubros %}
+                <tr>
+                    <td class="pull-left">{{ row.subsubtipoingreso__origen__nombre}}</td>
+                    <td class="text-right">{{ row.inicial_asignado|million|intcomma }}</td>
+
+                    <td class="success text-right">{{ row.actualizado_asignado|million|intcomma }}</td>
+                    <td class="success text-right">{% if row.actualizado_asignado and row.inicial_asignado %}{{ row.actualizado_asignado|sub:row.inicial_asignado|million|intcomma }}{% else %}0{% endif %}</td>
+                    <td class="success text-right">{{ row.actualizado_ejecutado|million|intcomma }}</td>
+                    {% if row.actualizado_asignado %}
+                        <td class="success montos">{{ row.actualizado_ejecutado|div:row.actualizado_asignado|mul:100|floatformat:1|intcomma }}%</td>
+                    {% else %}
+                        <td class="success montos">0</td>
+                    {% endif %}
+
+                    <td class="danger text-right">{% if row.final_asignado %}{{ row.final_asignado|million|intcomma }}{% else %}0 {% endif %}</td>
+                    <td class="danger text-right">{% if row.final_asignado %}{{ row.final_asignado|sub:row.inicial_asignado|million|intcomma }}{% else %}0{% endif %}</td>
+                    <td class="danger text-right">{% if row.final_ejecutado %}{{ row.final_ejecutado|million|intcomma }}{% else %}0{% endif %}</td>
+                    {% if row.final_asignado %}
+                        <td class="danger montos">{{ row.final_ejecutado|div:row.final_asignado|mul:100|floatformat:1|intcomma }}%</td>
+                    {% endif %}
+                </tr>
+            {% endfor %}
+            <tr class="success bold">
                 <td>TOTAL</td>
                 <td class="text-right">{{ rubros|total_sum:'inicial_asignado'|million|intcomma }}</td>
                 <td class="text-right">{{ rubros|total_sum:'actualizado_asignado'|million|intcomma }}</td>
@@ -451,26 +509,11 @@
                     </td>
                 {% endwith %}
             </tr>
-            </tfoot>
         </table>
-        </div>
-    </div>
-
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12 text-center">
-                <button id="show-detail-2" class="btn btn-default" type="submit">
-                Ver detalles en Tabla</button>
-            </div>
-        </div>
-    </div>
-
-    <div id="detail-2" class="row">
-        <div class="col-md-12">
+        <br />
+        <!-- /fin oim-tabla5 -->
         <h3><strong>Modificaciones al presupuesto municipal de ingresos - Recaudación municipal</strong>
         Millones de córdobas corrientes</h3>
-        </div>
-        <div class="col-md-12">
         <table class="table table-condensed">
             <tr><td></td><td></td><td colspan="4" class="success text-center"><h4>Modificación al {{ year_data.actualizado }}</h4></td><td colspan="4" class="danger"><h4>Modificación al {{ year_data.final }}</h4></td></tr>
             <tr class="info"> <th>Rubros de ingresos</th> <th>Inicial</th>
@@ -491,7 +534,7 @@
                     {% endif %}
 
                     <td class="danger text-right">{% if row.final_asignado %}{{ row.final_asignado|million|intcomma }}{% else %}0 {% endif %}</td>
-                    <td class="danger text-right">{% if row.final_asignado %}{{ row.final_asignado|sub:row.inicial_asignado|million|intcomma }}{% else %}0{% endif %}</td>
+                    <td class="danger text-right">{% if row.inicial_asignado %}{{ row.final_asignado|sub:row.inicial_asignado|million|intcomma }}{% else %}0{% endif %}</td>
                     <td class="danger text-right">{% if row.final_ejecutado %}{{ row.final_ejecutado|million|intcomma }}{% else %}0{% endif %}</td>
                     {% if row.final_asignado %}
                         <td class="danger montos">{{ row.final_ejecutado|div:row.final_asignado|mul:100|floatformat:1|intcomma }}%</td>
