--- a/templates/model_report/includes/form_report.html
+++ b/templates/model_report/includes/form_report.html
@@ -4,17 +4,15 @@
     {% include "model_report/includes/form_groupby.html" %}
     {% include "model_report/includes/form_filter.html" %}
     {% include "model_report/includes/form_config.html" %}
-    <p class="submit">
-    <button type="submit" class="query btn btn-success">{{ submit_label|default:_("Buscar") }}</button>
-    </p>
-    <p class="actions text-right">
+    <div class="actions text-right">
+        <button type="submit" class="query btn btn-success">{{ submit_label|default:_("Buscar") }}</button>
         {% if report_rows %}
         {% for export in report.exports %}
         <button type="submit" class="{{ export }} btn btn-primary" name="export" value="{{ export }}">{{ export|title }}</button>
         {% endfor %}
         <button type="button" class="print btn btn-primary" onclick="javascript:window.print()">{{ submit_label|default:_("Print") }}</button>
         {% endif %}
-    </p>
+    </div>
     </form>
 </div>
 {% endif %}
