fix header title

--- a/core/templates/ogm_chart.html
+++ b/core/templates/ogm_chart.html
@@ -57,7 +57,7 @@
 {% block section1 %}
 <div class="container">
     <div class="row">
-        <h2> <strong>Detalle de Ingresos</strong> <br/> del período</h2>
+        <h2> <strong>Detalle de Gastos</strong> <br/> del período</h2>
         <hr class="pma-line-2">
         <div class="col-md-7">
             <div class="chart-update col-md-1 float-left">
