fix templates titles and headers. add filter by indicator

--- a/core/templates/expenses.html
+++ b/core/templates/expenses.html
@@ -3,6 +3,10 @@
 {% load mathfilters %}
 {% load core_extras %}
 
+{% block indicator_description %}
+{{indicator_description}}
+{% endblock %}
+
 {% block section1 %}
 <div class="container">
     <div class="row">
