--- a/core/templates/_indicator.html
+++ b/core/templates/_indicator.html
@@ -3,6 +3,7 @@
 {% load humanize %}
 {% load mathfilters %}
 {% load core_extras %}
+{% load absurl %}
 {# TODO: Replace this by django-seo2 #}
 {% block titulo %}
 {{ municipio }}
@@ -20,30 +21,45 @@
 <div class="pma-search-bar pma-bg-blue ">
     <div class="container">
         <div class="row">
-        <div class="col-md-12">
-            <form method="GET">
-	    <div class="col-md-1">
+            <div class="col-md-12">
+                <form id="indicatorfilter" method="GET">
+                   <div class="col-md-1">
                     <span class="pma-fg-light-green titsearch"><strong>AÑO</strong></span>
-	            <select name="year">
-        	    {% for ayear in year_list %}
-                	<option {% if ayear == year|add:"0" %}selected{% endif %} value="{{ayear}}">{{ayear}}</option>
-	            {% endfor %}
-        	    </select>
-	    </div>
-	    <div class="col-md-3">
-                    <span class="pma-fg-light-green titsearch"><strong>MUNICIPIO</strong></span>
-	            <select name="municipio" class="municipio">
-        	    <option value="">Consolidado Municipal</option>
-	            {% for amunicipio in municipio_list %}
-        	        <option {% if amunicipio.slug == municipio.slug %}selected{% endif %} value="{{amunicipio.slug}}">{{amunicipio}}</option>
-	            {% endfor %}
-	            </select>
-	    </div>
-            <input type="submit" value="Buscar" class="btn buscar"/>
-            </form>
-        </div>
-        </div>
-    </div>
+                    <select name="year">
+                       {% for ayear in year_list %}
+                       <option {% if ayear == year|add:"0" %}selected{% endif %} value="{{ayear}}">{{ayear}}</option>
+                       {% endfor %}
+                   </select>
+               </div>
+               <div class="col-md-3">
+                <span class="pma-fg-light-green titsearch"><strong>MUNICIPIO</strong></span>
+                <select name="municipio" class="municipio">
+                   <option value="">Consolidado Municipal</option>
+                   {% for amunicipio in municipio_list %}
+                   <option {% if amunicipio.slug == municipio.slug %}selected{% endif %} value="{{amunicipio.slug}}">{{amunicipio}}</option>
+                   {% endfor %}
+                    </select>
+                </div>
+               <div class="col-md-3">
+                <span class="pma-fg-light-green titsearch"><strong>Indicador</strong></span>
+                <select name="indicador" class="indicator" id="indicator">
+                   <option value="">Consolidado Municipa</option>
+                   <option value=""></option>
+                        <option value="{%url 'origen_ingresos'%}">Origen de los ingresos del municipio</option>
+                        <option value="{% absurl 'origen_gastos'%}">Destino del gasto municipal</option>
+                        <option value="{% absurl 'inversion_categoria'%}">Inversiones</option>
+                        <option value="{% absurl 'gastos_funcion'%}">Gastos de funcionamiento</option>
+                        <option value="{% absurl 'gastos_personal'%}">Gastos de personal</option>
+                        <option value="{% absurl 'autonomia_gastos'%}">Dependencia para asumir gastos corrientes</option>
+                        <option value="{% absurl 'ahorro_corriente'%}">Ahorro corriente para inversiones</option>
+                        <option value="{% absurl 'ejecucion_presupuesto'%}">Ejecuci&oacute;n del presupuesto</option>
+                </select>
+                </div>
+           <input type="submit" value="Buscar" class="btn buscar"/>
+       </form>
+   </div>
+</div>
+</div>
 </div>
 {% endblock %}
 
