--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -127,7 +127,7 @@
                         <p>Da clic en cada categoría de inversión para ver sus proyectos relacionados </p>
                         <p>&nbsp;</p>
                     </div>
-                    <div class="row">
+                    <div class="row col-md-11">
                     {% for i in categorias %}
                         <div class="col-md-2 text-center">
                             <a href="/core/plan-de-inversion?inversion__anio={{ year }}&inversion__periodo={{ periodo}}&catinversion={{ i.id }}"><span class="info-box-icon pma-fg-light-green pma-icon {{ i.slug }}">
@@ -139,11 +139,13 @@
                     <div class="row list-icons-inversion">
                     {% endif %}
                     {% endfor %}
-                    </div>
-		    <div class="otras-categorias">
-	                    <div class="text-center">
-				<a class="ver-mas amarillo" role="button" data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample"><strong>Otras categorías de inversión</strong> <i class="glyphicon glyphicon-chevron-down"></i></a>
+			<div class="col-md-1">
+	                    <div class="text-center ver-mas">
+				<a class="blanco" role="button" data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample"><strong>VER MAS</strong></a>
 			    </div>
+			</div>
+                    </div>
+		    <div class="otras-categorias col-md-11">
 			    <div class="collapse" id="collapseExample">
 			    	<div class="well">
 	        		       	<div class="row">
