--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -1,15 +1,47 @@
 {% extends "_base.html" %}
-{% load core_extras static %}
+{% load core_extras static thumbnail %}
 {% block header %}
 <div class="pma-hero">
     <div class="container ">
         <div class="row">
             <div class="col-md-7">
+                <!-- iniciando carrousel -->
+                <div id="slider-portada" class="carousel slide carousel-fade" data-ride="carousel">
+                    <!-- Indicators -->
+                    <ol class="carousel-indicators">
+                        {% for i in banners %}
+                        <li data-target="#slider-portada" data-slide-to="{{forloop.counter0}}" class="{% if forloop.first %} class="active"{% endif%}"></li>
+                        {% endfor %}
+                    </ol>
+                    <!-- Wrapper for slides -->
+                    <div class="carousel-inner" role="listbox">
+                        {% for i in banners %}
+                        <div class="item{% if forloop.first %} active{% endif%}">
+                            <div class="carousel-caption">
+                                <h2 class="text-center">{{ i.titulo }}</h2>
+                                <h4 class="text-center">{{ i.descripcion }}</h4>
+                            </div>
+                            <img src="/media/{{ i.imagen }}" alt="{{ banner }}" class="pma-illustration img-responsive">
+                        </div>
+                        {% endfor %}
+                    </div>
+                    <!-- Controls -->
+                    <a class="left carousel-control" href="#slider-portada" role="button" data-slide="prev">
+                        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="right carousel-control" href="#slider-portada" role="button" data-slide="next">
+                       <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                       <span class="sr-only">Next</span>
+                    </a>
+                </div>
+                <!-- fin carrousel -->
+                <!-- 
                 <h2 class="text-center"> <strong>Participemos</strong> en la consulta del <br> Presupuesto Municipal</h2>
                 <h4 class="text-center"> Informémonos dónde y cuándo será</h4>
                 <div>
                     <img src="static/images/illustration-index.png" alt="..." class="pma-illustration">
-                </div>
+                </div-->
             </div>
             <div class="col-md-5">
                 <div id="nic-map-container"></div>
@@ -181,4 +213,6 @@
         </div>
     </div>
 </div>
+
+
 {% endblock %}
