--- a/core/templates/_base.html
+++ b/core/templates/_base.html
@@ -18,6 +18,7 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/css/select2.min.css" rel="stylesheet" />
 
     <!-- librerías opcionales que activan el soporte de HTML5 para IE8 -->
     <!--[if lt IE 9]>
@@ -98,6 +99,23 @@
                 <li><a href="#"><span class="glyphicon glyphicon-search"></span></a>
                 </li>
             </ul>
+<select class="js-example-basic-single">
+  <option></option>
+  <optgroup label="Managua/Nicaragua">
+    <option value="WY">Ciudad Sandino</option>
+    <option value="WY">Tipitapa</option>
+    <option value="WY">Managua</option>
+    <option value="WY">Ticuantepe</option>
+  </optgroup>
+  <optgroup label="Granada/Nicaragua">
+    <option value="WY">Granada</option>
+    <option value="WY">Diria</option>
+    <option value="WY">Nandaime</option>
+    <option value="WY">Ticuantepe</option>
+  </optgroup>
+</select>
+
+
         </div>
         </div>
     </nav>
@@ -202,10 +220,22 @@
     <script src="https://code.highcharts.com/mapdata/countries/ni/ni-all.js"></script>
     <script type="text/javascript" src="{% static 'maps/ni-custom-all.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/map-ni-drilldown.js' %}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/js/select2.min.js"></script>
     {% endblock %}
 
     {% block custom_scripts %}
     {% endblock %}
+    <script type="text/javascript">
+        $('select').select2();
+    </script>
+    <script type="text/javascript">
+        $(document).ready(function() {
+            $(".js-example-basic-single").select2({
+			    placeholder: "Select a state",
+                allowClear: true
+			});
+        });
+    </script>
 </body>
 
 </html>
