--- a/core/static/css/pma.css
+++ b/core/static/css/pma.css
@@ -485,3 +485,10 @@ footer .copyright {
     }
 }
 /* Fin estilos carrousel fade*/
+/*Estilos menu */
+.listado-municipios option {
+    margin: 40px;
+    background: rgba(0, 0, 0, 0.3) !important;
+    color: #fff;
+    text-shadow: 0 1px 0 rgba(0, 0, 0, 0.4);
+}
