--- a/core/templates/aci.html
+++ b/core/templates/aci.html
@@ -1,4 +1,4 @@
-{% extends "_indicator.html" %}
+{% extends "base.html" %}
 {% load static thumbnail chartit %}
 {% load humanize %} 
 {% load mathfilters %}
