--- a/core/templates/expenses.html
+++ b/core/templates/expenses.html
@@ -42,7 +42,7 @@
                 <tbody>
                 {% for row in rubros %}
                 <tr>
-                    <td>{% if row.tipogasto__nombre %}{{ row.tipogasto__nombre }}{% else %}{{ row.subtipogasto__nombre }}{% endif%}</td>
+                    <td>{% firstof row.tipogasto__nombre row.subtipogasto__nombre %}</td>
                     <td class="text-right">{{ row.inicial_asignado|million|intcomma }}</td>
                     <td class="text-right">{{ row.ejecutado|million|intcomma }}</td>
                     {% if row.inicial_asignado %}
