Primeros pasos a version responsive

--- a/core/templates/inversionpiechart.html
+++ b/core/templates/inversionpiechart.html
@@ -10,7 +10,7 @@
         <h2> <strong>Detalle de {{indicator_name}}</strong> <br/> del período</h2>
         <hr class="pma-line-2">
         <div class="col-md-7">
-            <div class="chart-update col-md-1 float-left">
+            <div class="chart-update col-xs-1 col-sm-1 col-md-1 float-left">
                     <span class="pma-icon pe-7s-bubble pma-fg-gray toggle-chart"
                         aria-hidden="true" id="chart-bubble-1" data-chartcontainer="bubble-1"></span>
                     <span id="chart-pie-1" class="pma-icon pe-7s-graph
