--- a/core/templates/_base.html
+++ b/core/templates/_base.html
@@ -15,6 +15,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/css/select2.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="{% static 'css/pma.css' %}">
     <link rel="stylesheet" href="{% static 'css/pma-icon.css' %}">
+    <link rel="stylesheet" href="{% static 'css/responsive.css' %}">
     <!-- Custom Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
@@ -172,13 +173,13 @@
                     <h3> <strong>Nuestros</strong> Aliados.</h3>
                     <hr class="pma-line-2">
                     <div class="row">
-                        <div class="col-md-4">
+                        <div class="col-xs-4 col-sm-4 col-md-4">
                             <img class="img-responsive" src="/static/images/logo_usaid.png" alt="USAID">
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-xs-4 col-sm-4 col-md-4">
                             <img class="img-responsive" src="/static/images/logo_guegue.png" alt="GUEGUE">
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-xs-4 col-sm-4 col-md-4">
                             <img class="img-responsive" src="/static/images/logo_global_communities.png" alt="GLOBAL">
                         </div>
                     </div>
