--- a/core/templates/_indicator.html
+++ b/core/templates/_indicator.html
@@ -23,7 +23,7 @@
         <div class="row">
             <div class="col-md-12">
                 <form id="indicatorfilter" method="GET">
-                   <div class="col-md-1">
+                   <div class="col-xs-1 col-sm-2 col-md-1">
                     <span class="pma-fg-light-green titsearch"><strong>AÑO</strong></span>
                     <select name="year">
                        {% for ayear in year_list %}
@@ -31,7 +31,7 @@
                        {% endfor %}
                    </select>
                </div>
-               <div class="col-md-3">
+               <div class="col-xs-3 col-sm-5 col-md-3">
                 <span class="pma-fg-light-green titsearch"><strong>MUNICIPIO</strong></span>
                 <select name="municipio" class="municipio">
                    <option value="">Consolidado Municipal</option>
@@ -40,7 +40,7 @@
                    {% endfor %}
                     </select>
                 </div>
-               <div class="col-md-3">
+               <div class="col-xs-3 col-sm-4 col-md-3">
                 <span class="pma-fg-light-green titsearch"><strong>Indicador</strong></span>
                 <select name="indicador" class="indicator" id="indicator">
                    <option value="">Consolidado Municipa</option>
@@ -54,8 +54,8 @@
                         <option value="{% absurl 'ahorro_corriente'%}">Ahorro corriente para inversiones</option>
                         <option value="{% absurl 'ejecucion_presupuesto'%}">Ejecuci&oacute;n del presupuesto</option>
                 </select>
-                </div>
-           <input type="submit" value="Buscar" class="btn buscar"/>
+            </div>
+            <div class="col-sm-1 col-md-1"><input type="submit" value="Buscar" class="btn buscar"/></div>
        </form>
    </div>
 </div>
@@ -82,7 +82,7 @@
         </div>
         <div class="row pma-header-summary wide">
             {% block indicator_summary %}
-            <div class="col-md-4">
+            <div class="col-xs-4 col-sm-4 col-md-4">
                 <div class="info-box">
                     <span class="info-box-icon pma-icon initial">
                     </span>
@@ -91,7 +91,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-xs-4 col-sm-4 col-md-4">
                 <div class="info-box">
                     <span class="info-box-icon pma-icon executed">
                     </span>
@@ -104,7 +104,7 @@
                 </div>
             </div>
             {% if municipio %}
-            <div class="col-md-4">
+            <div class="col-xs-4 col-sm-4 col-md-4">
                 <div class="info-box">
                     <span class="info-box-icon pma-icon municipality-category">
                     </span>
@@ -147,16 +147,16 @@
 <div class="pma-gradient">
     <div class="container">
         <div class="row" id="other-metrics-links">
-            <div class="col-md-3">
+            <div class="col-xs-3 col-sm-3 col-md-3">
                 <h3 class="other-metrics-title"><strong>Otros Indicadores</strong><br/>
                 que puedes consultar</h3>
             </div>
-            <div class="col-md-3 container-metrics-links">
+            <div class="col-xs-3 col-sm-3 col-md-3 container-metrics-links">
                 <a href="{% url 'origen_gastos' %}?{% if municipio %}municipio={{municipio.slug}}{% endif %}&{% if year %}year={{ year }}{% endif %}">Origen de Gastos </a>
                 <br>
                 <a href="{% url 'inversion_categoria' %}?{% if municipio %}municipio={{municipio.slug}}{% endif %}&{% if year %}year={{ year }}{% endif %}">Destinos de Inversión</a>
             </div>
-            <div class="col-md-3 container-metrics-links">
+            <div class="col-xs-3 col-sm-3 col-md-3 container-metrics-links">
                 <a href="{% url 'gastos_funcion' %}?{% if municipio %}municipio={{municipio.slug}}{% endif %}&{% if year %}year={{ year }}{% endif %}">Gastos de Funcionamiento </a>
                 <br>
                 <a href="{% url 'ahorro_corriente' %}?{% if municipio %}municipio={{municipio.slug}}{% endif %}&{% if year %}year={{ year }}{% endif %}">Ahorro Corriente de Inversión</a>
