--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -53,7 +53,7 @@
 {% block main_content %}
 <div class="container">
     <div class="row acerca">
-        <div class="col-md-6">
+        <div class="col-xs-6 col-sm-6 col-md-6">
             <div class="row">
                 <div class="col-md-12">
                     {% load i18n flatpages %}
@@ -67,7 +67,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-xs-6 col-sm-6 col-md-6">
             <div class="row">
                 <div class="col-md-12">
                     <img class="img-responsive" src="static/images/illustration-all-icons.png" alt="Sobre este sitio">
@@ -91,7 +91,7 @@
                 {% else %}
                 <div class="row info-index">
                 {% endif %}
-                    <div class="col-md-6">
+                    <div class="col-xs-6 col-sm-6 col-md-6">
                         <div class="info-box">
                             <span class="info-box-icon pma-fg-green pma-icon {{origen.subsubtipoingreso__origen__slug}}">
                             </span>
@@ -123,7 +123,7 @@
                 {% else %}
                 <div class="row">
                 {% endif %}
-                    <div class="col-md-6">
+                    <div class="col-xs-6 col-sm-6 col-md-6">
                         <div class="info-box">
                             <span class="info-box-icon pma-fg-green pma-icon {{ gasto.subsubtipogasto__origen__slug}}">
                             </span>
@@ -159,9 +159,9 @@
                         <p>Da clic en cada categoría de inversión para ver sus proyectos relacionados </p>
                         <p>&nbsp;</p>
                     </div>
-                    <div class="row col-md-11">
+                    <div class="row col-xs-11 col-sm-11 col-md-11">
                     {% for i in categorias %}
-                        <div class="col-md-2 text-center">
+                        <div class="col-xs-2 col-sm-2 col-md-2 text-center">
                             <a href="/core/plan-de-inversion?inversion__anio={{ year }}&inversion__periodo={{ periodo}}&catinversion={{ i.id }}"><span class="info-box-icon pma-fg-light-green pma-icon {{ i.slug }}">
                             </span></a>
                             <h5 class="text-center"><a href="/core/plan-de-inversion?inversion__anio={{ yea }}&inversion__periodo={{ periodo}}&catinversion={{ i.catinversion__id }}" class="blanco"><strong>{{ i.nombre }}</strong></a></h5>
@@ -171,7 +171,7 @@
                     <div class="row list-icons-inversion">
                     {% endif %}
                     {% endfor %}
-			<div class="col-md-1">
+			<div class="col-xs-1 col-sm-1 col-md-1">
 	                    <div class="text-center ver-mas">
 				<a class="blanco" role="button" data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample"><strong>VER MAS</strong></a>
 			    </div>
@@ -182,7 +182,7 @@
 			    	<div class="well">
 	        		       	<div class="row">
     					{% for i in otras_categorias %}
-						<div class="col-md-2 text-center">
+						<div class="col-xs-2 col-sm-2 col-md-2 text-center">
 							<a href="/core/plan-de-inversion?inversion__anio={{ year }}&inversion__periodo={{ periodo}}&catinversion={{ i.id }}"><span class="info-box-icon pma-fg-light-green pma-icon {{ i.slug }}"> </span></a>
 				                      	<h5 class="text-center"><a href="/core/plan-de-inversion?inversion__anio={{ year }}&inversion__periodo={{ periodo}}&catinversion={{ i.id }}" class="blanco"><strong>{{ i.nombre }}</strong></a></h5>
 						</div>
