--- a/core/templates/ogm_chart.html
+++ b/core/templates/ogm_chart.html
@@ -17,7 +17,7 @@
 {% endblock %}
 
 {% block indicator_summary %}
-<div class="col-md-4">
+<div class="col-xs-4 col-sm-4 col-md-4">
     <div class="info-box">
         <span class="info-box-icon pma-icon initial">
         </span>
@@ -26,7 +26,7 @@
         </div>
     </div>
 </div>
-<div class="col-md-4">
+<div class="col-xs-4 col-sm-4 col-md-4">
     <div class="info-box">
         <span class="info-box-icon pma-icon executed">
         </span>
@@ -40,18 +40,18 @@
         </div>
     </div>
 </div>
-<div class="col-md-4">
+{% if municipio %}
+<div class="col-xs-4 col-sm-4 col-md-4">
     <div class="info-box">
         <span class="info-box-icon pma-icon municipality-category">
         </span>
         <div class="info-box-content">
-            {% if municipio %}
-            {% endif %}
             <span class="info-box-text">Categor&iacute;a de municipio {{ mi_clase.clasificacion }}</span>
             <span class="info-box-number pma-green"></span>
         </div>
     </div>
 </div>
+ {% endif %}
 {% endblock %}
 
 {% block section1 %}
@@ -60,7 +60,7 @@
         <h2> <strong>Detalle de Gastos</strong> <br/> del período</h2>
         <hr class="pma-line-2">
         <div class="col-md-7">
-            <div class="chart-update col-md-1 float-left">
+            <div class="chart-update col-xs-1 col-sm-1 col-md-1 float-left">
                     <span class="pma-icon pe-7s-bubble pma-fg-gray"
                         aria-hidden="true" id="chart-bubble-1"></span>
                     <span id="chart-pie-1" class="pma-icon pe-7s-graph
