--- a/core/templates/oim_chart.html
+++ b/core/templates/oim_chart.html
@@ -20,7 +20,7 @@
 {% endblock %}
 
 {% block indicator_summary %}
-<div class="col-md-4">
+<div class="col-xs-4 col-sm-4 col-md-4">
     <div class="info-box">
         <span class="info-box-icon pma-icon initial">
         </span>
@@ -29,7 +29,7 @@
         </div>
     </div>
 </div>
-<div class="col-md-4">
+<div class="col-xs-4 col-sm-4 col-md-4">
     <div class="info-box">
         <span class="info-box-icon pma-icon executed">
         </span>
@@ -41,18 +41,18 @@
         </div>
     </div>
 </div>
-<div class="col-md-4">
+{% if municipio %}
+<div class="col-xs-4 col-sm-4 col-md-4">
     <div class="info-box">
         <span class="info-box-icon pma-icon municipality-category">
         </span>
         <div class="info-box-content">
-            {% if municipio %}
             <span class="info-box-text"><strong>Categor&iacute;a de municipio {{ mi_clase.clasificacion }}</strong></span>
             <span class="info-box-number pma-green"></span>
-            {% endif %}
         </div>
     </div>
 </div>
+{% endif %}
 {% endblock %}
 
 {% block section1 %}
@@ -61,7 +61,7 @@
         <div class="col-md-7">
             <h2> <strong>Detalle de Ingresos</strong> <br/> del período</h2>
 	    <hr class="pma-line-2">
-            <div class="chart-update col-md-1 float-left">
+            <div class="chart-update col-xs-1 col-sm-1 col-md-1 float-left">
                     <span class="pma-icon pe-7s-bubble pma-fg-gray toggle-chart"
                         aria-hidden="true" id="chart-bubble-1" data-chartcontainer="bubble-1"></span>
                     <span id="chart-pie-1" class="pma-icon pe-7s-graph
